Fixed text overflow of projects

--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,7 @@ span{
 .projects h2{
     display: inline-block;
     position: relative;
-    padding-top: 4rem;
+    padding-top: 2.4rem;
     padding-bottom:3rem;
     margin: 50 50 1.5rem 2rem;
 }
@@ -464,10 +464,12 @@ span{
 .project-column .project-box{
     position: relative;
     display: block;
-    padding: 5rem;
+    padding: 2rem;
     }
 .project-box .project-content{
     position:relative;
+    width: 100%;
+    height: 670px;
     padding-left: 2rem;
 }
 .project-content .content{
@@ -481,7 +483,7 @@ span{
     margin-bottom: 10rem; 
 }
 .project-content  .content p{
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin: 2rem 0 3rem;
 }
 .project-content .btn-box.btns{
